force-app/main/default/objects/Amazon_S3__mdt/Amazon_S3__mdt.object-meta.xml
<CustomObject>
    <label>Amazon S3</label>
    <pluralLabel>Amazon S3&apos;s</pluralLabel>
</CustomObject>