force-app/main/default/objects/Amazon_S3__mdt/fields/Access_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_Key_Id__c</fullName>
    <label>Access Key Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>