force-app/main/default/objects/Amazon_S3__mdt/fields/Bucket_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Sandbox__c</fullName>
    <label>Bucket Sandbox</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>