force-app/main/default/objects/Amazon_S3__mdt/fields/Proxy_Address__c.field-meta.xml
<CustomField>
    <fullName>Proxy_Address__c</fullName>
    <label>Proxy Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>