force-app/main/default/objects/Amazon_S3__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>