force-app/main/default/objects/Amazon_S3__mdt/fields/Region_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Region_Sandbox__c</fullName>
    <label>Region Sandbox</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>