force-app/main/default/objects/Amazon_S3__mdt/fields/Secret_Access_Key__c.field-meta.xml
<CustomField>
    <fullName>Secret_Access_Key__c</fullName>
    <label>Secret Access Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>